--- a/starter/src/main/res/layout/activity_main.xml
+++ b/starter/src/main/res/layout/activity_main.xml
@@ -14,4 +14,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout_sample"
+        android:layout_below="@+id/sample_text"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <ListView
+            android:id="@+id/swipe_list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
