--- a/linen-starter/src/main/res/layout/comment_row.xml
+++ b/linen-starter/src/main/res/layout/comment_row.xml
@@ -5,12 +5,12 @@
               android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/comment_row_name"
+        android:id="@+id/comment_row__name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
-        android:id="@+id/comment_row_content"
+        android:id="@+id/comment_row__content"
         android:layout_marginStart="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
