--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -2,10 +2,6 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity">
 
     <TextView
@@ -14,17 +10,59 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/swipe_layout_sample"
+    <LinearLayout
+        android:id="@+id/swipe_container"
         android:layout_below="@+id/sample_text"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <x7c1.linen.CustomSwipeToRefresh
+            android:id="@+id/swipe_layout_left"
+            android:background="@color/opaque_red"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/sample_left_list"
+                android:layout_width="150dp"
+                android:layout_height="400dp" />
+        </x7c1.linen.CustomSwipeToRefresh>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_layout_center"
+            android:background="@color/opaque_blue"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/sample_center_list"
+                android:layout_width="150dp"
+                android:layout_height="400dp" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_layout_sample"
+            android:background="@color/opaque_green"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content">
+
+            <ListView
+                android:id="@+id/sample_right_list"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+    </LinearLayout>
+
+    <View
+        android:orientation="horizontal"
+        android:id="@+id/dummy_surface"
+        android:alpha="0.2"
+        android:background="@color/opaque_red"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
-        <ListView
-            android:id="@+id/swipe_list"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
