--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <color name="opaque_red">#ff9d9d</color>
+    <color name="opaque_red">#ffbebe</color>
     <color name="opaque_blue">#9999e4</color>
     <color name="opaque_green">#9cc79c</color>
 
