--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -37,10 +37,10 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content">
 
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/sample_center_list"
-                android:layout_width="150dp"
-                android:layout_height="400dp" />
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
