--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -24,6 +24,6 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/opaque_blue"
+        android:background="@color/light_gray"
         />
 </LinearLayout>
