--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -6,7 +6,8 @@
     </style>
 
     <color name="opaque_red">#ffbebe</color>
-    <color name="opaque_blue">#9999e4</color>
-    <color name="opaque_green">#9cc79c</color>
+    <color name="opaque_blue">#cad9fd</color>
+    <color name="opaque_green">#c7fac7</color>
 
+    <color name="light_gray">#dedcdc</color>
 </resources>
