--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
-    android:layout_marginTop="5dp"
+    android:paddingTop="5dp"
+    android:background="?android:attr/selectableItemBackground"
     >
 
     <TextView
