--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
@@ -12,19 +11,45 @@
     <TextView
         android:id="@+id/source_row__title"
         android:textSize="18sp"
+        android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/source_row__description"
         android:textSize="14sp"
+        android:layout_below="@+id/source_row__title"
+        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <View
+        android:layout_alignParentBottom="true"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
         android:background="@color/light_gray"
         />
-</LinearLayout>
+
+    <View
+        android:id="@+id/source_row__state_unloaded"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_width="5dp"
+        android:layout_height="fill_parent"
+        android:minHeight="30dp"
+        android:layout_margin="5dp"
+        android:background="@color/light_gray"
+        />
+
+    <View
+        android:id="@+id/source_row__state_prefetched"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_width="5dp"
+        android:layout_height="fill_parent"
+        android:minHeight="30dp"
+        android:layout_margin="5dp"
+        android:background="@color/opaque_blue"
+        />
+
+</RelativeLayout>
