--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/activity_main__swipe_container"
         android:layout_above="@+id/activity_main__sample_text"
         android:orientation="horizontal"
+        android:background="@color/light_gray"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -17,6 +18,8 @@
             android:id="@+id/activity_main__swipe_layout_left"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:layout_marginRight="1dp"
             >
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
@@ -27,9 +30,9 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:minHeight="?attr/actionBarSize"
-                    android:background="@color/opaque_red"
-                    app:titleTextColor="@android:color/secondary_text_light"
+                    android:background="@color/opaque_blue"
                     app:layout_scrollFlags="scroll|enterAlways"
+                    app:titleTextColor="@android:color/secondary_text_light"
                     />
 
             </android.support.design.widget.AppBarLayout>
@@ -44,18 +47,33 @@
 
         </android.support.design.widget.CoordinatorLayout>
 
-        <android.support.v4.widget.SwipeRefreshLayout
+        <LinearLayout
             android:id="@+id/activity_main__swipe_layout_center"
-            android:background="@color/opaque_blue"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content">
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white" >
+
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/activity_main__entry_toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="?attr/actionBarSize"
+                    android:background="@color/opaque_red"
+                    app:titleTextColor="@android:color/secondary_text_light" />
+
+            </android.support.design.widget.AppBarLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/activity_main__sample_center_list"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+        </LinearLayout>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/activity_main__swipe_layout_right"
