--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -30,6 +30,6 @@
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:layout_marginTop="5dp"
-        android:background="@color/opaque_green"
+        android:background="@color/light_gray"
         />
 </LinearLayout>
