--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -15,6 +15,8 @@
     <color name="opaque_green">#c7fac7</color>
 
     <color name="cerulean_blue">#2A52BE</color>
+    <color name="amaranth">#e52b50</color>
+    <color name="generic_viridian">#007F66</color>
 
     <color name="light_gray">#e6e6e6</color>
 
