--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="-3dp"
+    android:layout_marginLeft="-2dp"
+    android:layout_marginRight="-2dp"
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="1dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardBackgroundColor="@android:color/white"
+    card_view:cardPreventCornerOverlap="false"
+    >
+
+<LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
     android:layout_marginTop="5dp"
+    android:paddingTop="7dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="7dp"
+    android:paddingLeft="10dp"
     >
 
     <TextView
@@ -16,20 +33,19 @@
 
     <TextView
         android:id="@+id/entry_row__content"
-        android:textSize="14sp"
+        android:textSize="15sp"
+        android:layout_marginTop="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@+id/entry_row__created_at"
         android:textSize="12sp"
-        android:layout_width="wrap_content"
+        android:textAlignment="textEnd"
+        android:layout_marginTop="3dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="@color/light_gray"
-        />
 </LinearLayout>
+
+</android.support.v7.widget.CardView>
