--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="-3dp"
+    android:layout_marginLeft="-2dp"
+    android:layout_marginRight="-2dp"
+    card_view:cardCornerRadius="0dp"
+    card_view:cardElevation="1dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardBackgroundColor="@android:color/white"
+    card_view:cardPreventCornerOverlap="false"
+    >
+
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="7dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="7dp"
     android:paddingLeft="10dp"
-    android:paddingTop="5dp"
     android:background="?android:attr/selectableItemBackground"
     >
 
@@ -17,18 +33,11 @@
 
     <TextView
         android:id="@+id/source_row__description"
-        android:textSize="14sp"
+        android:textSize="15sp"
+        android:layout_marginTop="3dp"
         android:layout_below="@+id/source_row__title"
-        android:layout_marginBottom="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <View
-        android:layout_alignParentBottom="true"
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="@color/light_gray"
-        />
 
     <View
         android:id="@+id/source_row__state_unloaded"
@@ -37,7 +46,6 @@
         android:layout_width="5dp"
         android:layout_height="fill_parent"
         android:minHeight="30dp"
-        android:layout_margin="5dp"
         android:background="@color/light_gray"
         />
 
@@ -48,8 +56,9 @@
         android:layout_width="5dp"
         android:layout_height="fill_parent"
         android:minHeight="30dp"
-        android:layout_margin="5dp"
         android:background="@color/opaque_blue"
         />
 
 </RelativeLayout>
+
+</android.support.v7.widget.CardView>
