--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="-3dp"
-    android:layout_marginLeft="-2dp"
-    android:layout_marginRight="-2dp"
-    card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="1dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardBackgroundColor="@android:color/white"
-    card_view:cardPreventCornerOverlap="false"
+    style="@style/AppCardView"
     >
 
 <LinearLayout
+    style="@style/AppCardViewRow"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="5dp"
-    android:paddingTop="7dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="7dp"
-    android:paddingLeft="10dp"
     >
 
     <TextView
