--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="-3dp"
-    android:layout_marginLeft="-2dp"
-    android:layout_marginRight="-2dp"
-    card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="1dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardBackgroundColor="@android:color/white"
-    card_view:cardPreventCornerOverlap="false"
+    style="@style/AppCardView"
     >
 
 <RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="7dp"
-    android:paddingRight="5dp"
-    android:paddingBottom="7dp"
-    android:paddingLeft="10dp"
-    android:background="?android:attr/selectableItemBackground"
+    style="@style/AppCardViewRow"
+    android:paddingStart="10dp"
+    android:paddingEnd="5dp"
     >
 
     <TextView
@@ -41,7 +27,7 @@
 
     <View
         android:id="@+id/source_row__state_unloaded"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_width="5dp"
         android:layout_height="fill_parent"
@@ -51,7 +37,7 @@
 
     <View
         android:id="@+id/source_row__state_prefetched"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_width="5dp"
         android:layout_height="fill_parent"
