adjust color of EntryDetailArea

--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -37,7 +37,7 @@
         <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
-    <color name="opaque_red">#ffecf1</color>
+    <color name="opaque_red">#f9edf0</color>
     <color name="opaque_blue">#ecf1ff</color>
     <color name="opaque_green">#ecfff1</color>
 
@@ -46,6 +46,8 @@
     <color name="carnelian">#B31B1B</color>
     <color name="cerulean_blue">#2A52BE</color>
     <color name="generic_viridian">#007F66</color>
+    <color name="saddle_brown">#8B4513</color>
+    <color name="sienna">#882D17</color>
 
     <color name="light_gray">#e6e6e6</color>
 
