--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -80,7 +80,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/opaque_red" >
+            android:background="@color/opaque_orange" >
 
             <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
