--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -36,7 +36,7 @@
         <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
-    <color name="opaque_red">#f9edf0</color>
+    <color name="opaque_orange">#faf0ec</color>
     <color name="opaque_blue">#ecf1ff</color>
     <color name="opaque_green">#ecfff1</color>
 
