--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -43,18 +43,30 @@
                 app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 />
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/activity_main__source_scroll_down"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|start"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="16dp"
+                android:clickable="true"
+                android:src="@drawable/ic_skip_next_24dp"
+                app:backgroundTint="@color/cerulean_blue"/>
+
         </android.support.design.widget.CoordinatorLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/activity_main__entry_area"
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/opaque_green" >
+            android:background="@color/opaque_green"
+            >
 
-            <android.support.design.widget.AppBarLayout
+            <LinearLayout
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/activity_main__entry_toolbar"
@@ -65,15 +77,26 @@
                     style="@style/AppToolbar"
                     />
 
-            </android.support.design.widget.AppBarLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/activity_main__entry_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/activity_main__entry_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+            </LinearLayout>
 
-        </LinearLayout>
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|start"
+                android:clickable="true"
+                android:src="@drawable/ic_skip_next_24dp"
+                android:layout_alignParentBottom="true"
+                app:backgroundTint="@color/generic_viridian"
+                style="@style/FloatingActionButton"
+                />
 
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/activity_main__entry_detail_area"
