--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -45,14 +45,11 @@
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/activity_main__source_scroll_down"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|start"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="16dp"
-                android:clickable="true"
-                android:src="@drawable/ic_skip_next_24dp"
-                app:backgroundTint="@color/cerulean_blue"/>
+                app:backgroundTint="@color/cerulean_blue"
+                style="@style/ToNextButton"
+                />
 
         </android.support.design.widget.CoordinatorLayout>
 
@@ -86,14 +83,9 @@
             </LinearLayout>
 
             <android.support.design.widget.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|start"
-                android:clickable="true"
-                android:src="@drawable/ic_skip_next_24dp"
                 android:layout_alignParentBottom="true"
                 app:backgroundTint="@color/generic_viridian"
-                style="@style/FloatingActionButton"
+                style="@style/ToNextButton.Polyfill"
                 />
 
         </RelativeLayout>
