--- a/linen-starter/src/main/res/values-v21/styles.xml
+++ b/linen-starter/src/main/res/values-v21/styles.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="FloatingActionButton">
+    <style name="ToNextButton.Polyfill">
         <item name="android:layout_margin">16dp</item>
     </style>
 
