--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -9,6 +9,7 @@
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:orientation="vertical"
+    android:layout_height="95dp"
     >
 
     <TextView
