--- a/linen-starter/src/main/res/layout/main_layout.xml
+++ b/linen-starter/src/main/res/layout/main_layout.xml
@@ -33,5 +33,27 @@
             android:layout_height="wrap_content"
             android:text="menu2"
             />
+
+        <Button
+            android:id="@+id/main_layout__create_dummies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="create dummies"
+            />
+
+        <Button
+            android:id="@+id/main_layout__show_all_entries"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="dump entries"
+            />
+
+        <Button
+            android:id="@+id/main_layout__init_dummies"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="init dummies"
+            />
+
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
