--- a/linen-starter/src/main/res/layout/source_row.xml
+++ b/linen-starter/src/main/res/layout/source_row.xml
@@ -15,7 +15,10 @@
         android:textSize="18sp"
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="1"
+        />
 
     <TextView
         android:id="@+id/source_row__description"
@@ -23,7 +26,10 @@
         android:layout_marginTop="3dp"
         android:layout_below="@+id/source_row__title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="2"
+        />
 
     <View
         android:id="@+id/source_row__state_unloaded"
