--- a/linen-starter/src/main/res/layout/activity_main.xml
+++ b/linen-starter/src/main/res/layout/activity_main.xml
@@ -64,14 +64,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/activity_main__entry_toolbar"
+                <android.support.design.widget.AppBarLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?attr/actionBarSize"
-                    android:background="@color/generic_viridian"
-                    style="@style/AppToolbar"
-                    />
+                    android:layout_height="wrap_content">
+
+                    <android.support.v7.widget.Toolbar
+                        android:id="@+id/activity_main__entry_toolbar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="?attr/actionBarSize"
+                        android:background="@color/generic_viridian"
+                        style="@style/AppToolbar"
+                        />
+
+                </android.support.design.widget.AppBarLayout>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/activity_main__entry_list"
