--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
     </style>
 
     <style name="ToNextButton">
-        <item name="fabSize">mini</item>
+        <item name="fabSize">normal</item>
         <item name="android:src">@drawable/ic_skip_next_24dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
