--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -9,9 +9,7 @@
     android:paddingStart="10dp"
     android:paddingEnd="10dp"
     android:orientation="vertical"
-    android:layout_height="95dp"
     >
-
     <TextView
         android:id="@+id/entry_row__title"
         android:textSize="18sp"
@@ -27,6 +25,7 @@
         android:layout_marginTop="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minHeight="30sp"
         android:ellipsize="end"
         android:maxLines="2"
         />
@@ -37,7 +36,9 @@
         android:textAlignment="textEnd"
         android:layout_marginTop="3dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:minHeight="12sp"
+        />
 
 </LinearLayout>
 
