--- a/linen-starter/src/main/res/layout/entry_row.xml
+++ b/linen-starter/src/main/res/layout/entry_row.xml
@@ -16,18 +16,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:maxLines="1"
+        android:lines="1"
         />
 
     <TextView
         android:id="@+id/entry_row__content"
         android:textSize="15sp"
         android:layout_marginTop="3dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="30sp"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:lines="2"
         />
 
     <TextView
@@ -37,7 +36,7 @@
         android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="12sp"
+        android:lines="1"
         />
 
 </LinearLayout>
