--- a/linen-starter/src/main/res/values/styles.xml
+++ b/linen-starter/src/main/res/values/styles.xml
@@ -6,23 +6,34 @@
         <item name="colorControlNormal">@color/transparent_white</item>
     </style>
 
+    <style name="AppItemList">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/opaque_blue</item>
+        <item name="android:layout_marginBottom">@dimen/app_toolbar_bottom_height</item>
+    </style>
+
     <style name="AppToolbar">
         <item name="titleTextColor">@android:color/white</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/toolbar_background</item>
         <item name="android:minHeight">?attr/actionBarSize</item>
     </style>
 
     <style name="AppToolbarBottom">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">38dp</item>
+        <item name="android:layout_height">@dimen/app_toolbar_bottom_height</item>
         <item name="android:background">@color/toolbar_background</item>
         <item name="android:layout_alignParentBottom">true</item>
     </style>
 
-    <!--<item name="titleTextColor">@android:color/secondary_text_dark</item>-->
-    <!--<item name="android:textAlignment">textEnd</item>-->
-    <!--<item name="android:layout_marginRight">8dp</item>-->
+    <style name="AppBottomText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/secondary_text_dark</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
 
     <style name="AppCardView">
         <item name="cardBackgroundColor">@android:color/white</item>
@@ -51,11 +62,14 @@
     </style>
 
     <style name="ToNextButton">
+        <item name="backgroundTint">@color/to_next_button_background</item>
         <item name="fabSize">mini</item>
+
         <item name="android:src">@drawable/ic_skip_next_24dp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:clickable">true</item>
+        <item name="android:layout_alignParentBottom">true</item>
     </style>
 
     <style name="ToNextButton.Polyfill">
@@ -63,6 +77,8 @@
         <item name="android:layout_marginLeft">5dp</item>
         <item name="android:layout_marginRight">5dp</item>
     </style>
+
+    <dimen name="app_toolbar_bottom_height">38dp</dimen>
 
     <color name="toolbar_background">@color/dark_imperial_blue</color>
     <color name="to_next_button_background">@color/lapis_lazuli</color>
